--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "red-moon",
   "version": "0.1.0",
-  "homepage": "https://github.com/EiJey11/Webramverk_2022.git",
+  "homepage": "http://github.com/EiJey11/Webramverk_2022.git",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
